Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115002

Can't import MTLDevice with QRhi Metal.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.2.10, 6.5.3, 6.6.0 Beta2, 6.7.0 FF
    • 6.4.0, 6.5.1, 6.6.0 Beta1
    • Qt RHI
    • None
    • macOS
    • e090853ad (dev), 747ceb851 (6.6), e0fb09e83 (6.5), 27b1b8614 (tqtc/lts-6.2)

    Description

      Passing an external MTLDevice to Qt will always fail because the code is checking if the current device is valid instead of the imported device when calling `QQuickRenderControl::initialize`.

      https://github.com/qt/qtbase/blob/dev/src/gui/rhi/qrhimetal.mm#L465C9-L465C22

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            hyhyhy Renan Rios Panegassi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes