rhi: metal: Fix external MTLDevice import

Fixes: QTBUG-115002
Change-Id: I57c12685f8451420c30c65a1a25064607b52e31c
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit e090853ad598aa4f39304d69ec29b80fc3fceb62)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>